@@ -1,3 +1,5 @@
 @echo off
 cd /d "%~dp0"
-start javaw -Xms256m -Xmx1024m -cp "lib\patches;icons;lib\*" delta.games.lotro.Main
+set JAVA=runtime\bin\javaw.exe
+if not exist "%JAVA%" set JAVA=javaw
+start "%JAVA%" -Xms256m -Xmx1024m --add-exports java.desktop/sun.swing.table=ALL-UNNAMED --add-exports java.desktop/sun.swing=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED -cp "lib\patches;icons;lib\*" delta.games.lotro.Main
